<resources>
    <string name="app_name">Story App</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="failed_to_register">failed to register</string>
    <string name="failed_to_login">failed to login</string>
    <string name="loading">Loading…</string>
    <string name="welcome_msg">Welcome to Story App</string>
    <string name="create_account">Create Account</string>
    <string name="or">--- OR ---</string>
    <string name="logout">Logout</string>
    <string name="new_story">New Story</string>
    <string name="logo">Logo</string>
    <string name="no_owner">owner not found</string>
    <string name="no_desc">no description</string>
    <string name="email_err_msg">Invalid email format</string>
    <string name="passwd_err_msg">Password must be at least 8 characters</string>
    <string name="gallery">gallery</string>
    <string name="describe">describe your picture:</string>
    <string name="add_new_story">Add New Story</string>
    <string name="upload_image_first">Please insert image file first</string>
    <string name="slogan">Share your moments and show the world who you are</string>
    <string name="google_maps">Google Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location">location </string>
</resources>